src/objects/E2_Recommended_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>CMC_Asset__c</referenceTo>
        <relationshipLabel>E2_Recommended_Asset__c</relationshipLabel>
        <relationshipName>E2_Recommended_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours_Saved__c</fullName>
        <formula>Asset__r.Total_Hours__c -  Asset__r.Reuse_LOE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_Asset_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Scope Asset Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipLabel>Recommended Assets</relationshipLabel>
        <relationshipName>E2_Recommended_Assets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Recommended Asset</label>
    <nameField>
        <displayFormat>A - {00000}</displayFormat>
        <label>Recommended Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E2_Recommended_Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>